--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,59 +7,16 @@ on:
     branches: [ "main" ]
 
 jobs:
-  # -----------------------------------------------------------------------------
-  # Linux Build (Ubuntu 22.04)
-  # Uses the 'linux-ci-release' preset
-  # -----------------------------------------------------------------------------
-  build-linux:
-    name: Linux (Clang / Release)
+  build-all:
     runs-on: ubuntu-latest
-
+    container:
+      image: ghcr.io/${{ github.repository_owner }}/iabuild-env:latest
+    strategy:
+      matrix:
+        target: [linux-x64, linux-arm64, windows-x64, windows-arm64, wasm]
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
-
-    - name: Install System Dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y ninja-build clang libssl-dev
-
-    - name: Configure CMake
-      run: cmake --preset linux-ci
-
-    - name: Build
-      run: cmake --build --preset linux-ci-release
-
-    - name: Run Unit Tests
-      run: ./out/build/linux-ci/bin/Release/IACore_Test_Suite
-
-  # -----------------------------------------------------------------------------
-  # Windows Build
-  # Uses the 'windows-debug' preset (Clang-CL + VCPKG)
-  # -----------------------------------------------------------------------------
-  build-windows:
-    name: Windows (Clang-CL / Debug)
-    runs-on: windows-latest
-    
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
-
-    - name: Setup Ninja
-      run: choco install ninja
-
-    - name: Setup VCPKG Environment
-      run: echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" >> $env:GITHUB_ENV
-
-    - name: Install OpenSSL via VCPKG
-      run: vcpkg install openssl:x64-windows
-
-    - name: Configure CMake
-      run: cmake --preset windows-default
-
-    - name: Build
-      run: cmake --build --preset windows-debug
-
-    - name: Run Unit Tests
-      run: ./out/build/windows-default/bin/Debug/IACore_Test_Suite.exe
- 
+      - uses: actions/checkout@v4
+      - name: Build
+        run: |
+          cmake --preset ${{ matrix.target }}
+          cmake --build --preset debug
