--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ jobs:
   build-all:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/${{ github.repository_owner }}/iabuild-env:latest
+      image: ghcr.io/i-a-s/iabuild-env:latest
     strategy:
       matrix:
         target: [linux-x64, linux-arm64, windows-x64, windows-arm64, wasm]
