--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-linux-wasm:
+  build-linux-and-wasm:
     runs-on: ubuntu-latest
     permissions:
       contents: read
