--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,14 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     endif()
 endif()
 
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "amd64|x86_64|AMD64")
+    set(IACORE_ARCH_X64 TRUE)
+elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64|ARM64")
+    set(IACORE_ARCH_ARM64 TRUE)
+elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "wasm32|emscripten")
+    set(IACORE_ARCH_WASM TRUE)
+endif()
+
 if(MSVC)
     add_compile_options(/W4)
     if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
