--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [linux-x64]
+        target: [x64-linux]
     steps:
       - uses: actions/checkout@v4
 
