--- a/Src/IACore/CMakeLists.txt
+++ b/Src/IACore/CMakeLists.txt
@@ -78,7 +78,7 @@ if(IACORE_ARCH_X64)
     if(MSVC)
         target_compile_options(IACore INTERFACE /arch:AVX2)
     else()
-        target_compile_options(IACore INTERFACE -mavx2 -mfma -mpclmul -maes -mbmi -mbmi2)
+        target_compile_options(IACore INTERFACE -mavx2 -mfma -mpclmul -maes -mbmi -mbmi2 -mf16c)
     endif()
     target_compile_definitions(IACore INTERFACE HWY_BASELINE_TARGETS=HWY_AVX2)
 elseif(IACORE_ARCH_ARM64)
